# british-baseball-stats

./: .env.example  .gitignore  CLAUDE.md  README.md  REVIEW.md  config.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: main.yml
app/: Home.py  env.py
app/components/: charts.py  data_access.py  filters.py  formatting.py  theme.py
app/pages/: 10_Feedback.py  1_Leaderboards.py  2_Player_Explorer.py  3_Player_Page.py  4_Team_Page.py  5_Data_Admin.py  5_Player_Comparison.py  6_Team_Comparison.py  7_Batter_Archetypes.py  7_Data_Admin.py  8_Data_Admin.py  8_Methodology.py  9_Methodology.py
db/: engine.py  models.py  storage.py  upsert.py
db/migrations/: env.py
db/migrations/versions/: 541b9a2791f0_add_fielding_stats_to_batting_season_.py  59e6cc2d0d86_add_risp_splits_and_game_lob.py  (+4 more)
scraper/: cache.py  discovery.py  http_client.py  pipeline.py  rate_limiter.py  scrape_boxscores.py  scrape_schedule.py
scraper/recon/: explore_calendar.py  findings.md  risp_lob_plan.md
scripts/: publish_db.py  pull_latest_db.py  refresh_data.py
stats/: advanced_stats.py  aggregation.py  archetypes.py  constants.py  league_context.py  matchups.py  rate_stats.py  recompute.py  shrinkage.py  spray.py  war.py
tests/: conftest.py  test_aggregation.py  test_archetypes.py  test_data_access.py  test_db_storage.py  test_league_code_history.py  test_league_context.py  test_matchups.py  test_refresh_data.py  test_scrape_boxscores.py  test_scrape_schedule_history.py  test_shrinkage.py  test_spray.py  test_stats_formulas.py  test_upsert_idempotency.py
